tests/ui/wrong_item.stderr
error: `template_minify` can only be used on an Askama template item
 --> tests/ui/wrong_item.rs:4:1
  |
4 | fn not_a_template_item() {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
